[page layout]: fix main content not stretching full height and footer overlapping it in the bottom

--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,10 @@
   src: local("Reactive-3zz73"), url("./assets/fonts/Reactive-3zz73.ttf") format("truetype");
 }
 
+html, body {
+  height: 100%;
+}
+
 body {
   margin: 0;
   font-family: "Core Sans", sans-serif;
